# rust_simple_server

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
