[package]
name = "hello-username-rocket"
version = "0.1.0"
authors = ["1mehal <mehal.box@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket = { git = "https://github.com/jfbilodeau/Rocket", version = "0.5.0-dev"}
# rocket = "0.4.2"
# rocket_codegen = "0.4.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev"}
jsonwebtoken = "7.0.0-beta.1"
serde = {version = "1.0", features = ["derive"] }
cookie = "0.13.2"

[dependencies.rocket_contrib]
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"
